--- a/Next lesson finder/src/main/res/layout/activity_main.xml
+++ b/Next lesson finder/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/app_bg"
     android:padding="@dimen/box_inset_layout_padding"
-    tools:context=".MainActivity"
+    tools:context=".activity_main"
     tools:deviceIds="wear">
 
     <ScrollView
