--- a/Next lesson finder/src/main/res/layout/activity_authenticate.xml
+++ b/Next lesson finder/src/main/res/layout/activity_authenticate.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="30dp" />
 
@@ -49,7 +49,7 @@
                         android:gravity="center"
                         android:text="status" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="20dp" />
 
@@ -71,7 +71,7 @@
                             android:maxLength="6" />
                     </FrameLayout>
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
 
@@ -91,7 +91,7 @@
                             android:inputType="number" />
                     </FrameLayout>
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="10dp" />
 
@@ -103,7 +103,7 @@
                         android:background="@drawable/itembg_top"
                         android:textColor="@color/text_color" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
 
@@ -115,7 +115,7 @@
                         android:background="@drawable/itembg_bottom"
                         android:textColor="@color/text_color" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="20dp" />
 
@@ -127,7 +127,7 @@
                         android:text="version"
                         android:textColor="#34FFFFFF" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="20dp" />
 
