--- a/Next lesson finder/src/main/res/layout/activity_settings.xml
+++ b/Next lesson finder/src/main/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="30dp" />
 
@@ -43,7 +43,7 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="20dp" />
 
@@ -72,7 +72,7 @@
 
                     </LinearLayout>
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
 
@@ -119,7 +119,7 @@
                     </LinearLayout>
 
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
 
@@ -153,7 +153,7 @@
 
                     </FrameLayout>
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
 
@@ -169,7 +169,7 @@
                         android:textColor="@android:color/secondary_text_dark"
                         android:textSize="12sp" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp" />
 
@@ -185,7 +185,7 @@
                         android:textColor="@android:color/secondary_text_dark"
                         android:textSize="14sp" />
 
-                    <Space
+                    <View
                         android:id="@+id/Space"
                         android:layout_width="match_parent"
                         android:layout_height="20dp" />
@@ -198,7 +198,7 @@
                         android:text="version"
                         android:textColor="#34FFFFFF" />
 
-                    <Space
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="20dp" />
 
